--- a/Penetration/域环境搭建/域环境搭建.md
+++ b/Penetration/域环境搭建/域环境搭建.md
@@ -2,7 +2,7 @@
 
 在安装vmware tools是会出现报错
 
-![image-20231113225453649](images\1.png)
+![image-20231113225453649](images/1.png)
 
 原因是没有安装补丁
 
@@ -14,149 +14,149 @@
 
 下载 Windows Server 2012 R2 更新程序 ([KB2919355](https://www.microsoft.com/zh-CN/download/details.aspx?id=42334)) 并更新安装。
 
-![image-20231113225525510](images\2.png)
+![image-20231113225525510](images/2.png)
 
 弄好后，配置内网，选择仅主机模式
 
-![image-20231114222110407](images\3.png)
+![image-20231114222110407](images/3.png)
 
 配置IP
 
-![image-20231114222757654](images\4.png)
+![image-20231114222757654](images/4.png)
 
-![image-20231114222805612](images\5.png)
+![image-20231114222805612](images/5.png)
 
 更改计算机名
 
 点击 **控制面板** ---> **系统和安全** ---> **系统** ---> **找到计算机名点击更改设置** ---> **点击更改** ---> **更改完成后点击重起计算机.**
 
-![image-20231114223208287](images\6.png)
+![image-20231114223208287](images/6.png)
 
 安装域控和IDNS服务，选择添加角色和功能
 
-![image-20231114223335445](images\7.png)
+![image-20231114223335445](images/7.png)
 
-![image-20231114223434773](images\8.png)
+![image-20231114223434773](images/8.png)
 
 下一步直接，选择如下两个服务
 
-![image-20231114223504447](images\9.png)
+![image-20231114223504447](images/9.png)
 
-![image-20231114223649188](images\10.png)
+![image-20231114223649188](images/10.png)
 
-![image-20231114223717609](images\11.png)
+![image-20231114223717609](images/11.png)
 
 勾选重启后点击安装
 
 在仪表盘中将此服务器升级为域控制器
 
-![image-20231114224032998](images\12.png)
+![image-20231114224032998](images/12.png)
 
 添加新体，自己定义一个根域名
 
-![image-20231114224209932](images\13.png)
+![image-20231114224209932](images/13.png)
 
 设置一个还原密码
 
-![image-20231114224344047](images\14.png)
+![image-20231114224344047](images/14.png)
 
-![image-20231114224412442](images\15.png)
+![image-20231114224412442](images/15.png)
 
 会出现以下情况
 
-![image-20231114224510731](images\16.png)
+![image-20231114224510731](images/16.png)
 
 需要修改本地的Administrator密码
 
 在仪表盘中找到计算机管理
 
-![image-20231114224701221](images\17.png)
+![image-20231114224701221](images/17.png)
 
-![image-20231114224835486](images\18.png)
+![image-20231114224835486](images/18.png)
 
 再次回到界面，先决条件检查已经通过
 
-![image-20231114224951722](images\19.png)
+![image-20231114224951722](images/19.png)
 
 安装后会重启
 
-![image-20231114225826503](images\20.png)
+![image-20231114225826503](images/20.png)
 
 升级成功
 
-![image-20231114225850799](images\21.png)
+![image-20231114225850799](images/21.png)
 
 创建Active Directory用户
 
-![image-20231115203501931](images\22.png)
+![image-20231115203501931](images/22.png)
 
 打开Active Directory用户和计算器，在Users中右键新建用户
 
-![image-20231115203618216](images\23.png)
+![image-20231115203618216](images/23.png)
 
-![image-20231115203821991](images\24.png)
+![image-20231115203821991](images/24.png)
 
 点击下一步设置一个密码，顺带设置一下用户下次登录不需要更改密码
 
-![image-20231115203928800](images\25.png)
+![image-20231115203928800](images/25.png)
 
 添加成功，接下来帮win7添加到域中
 
-![image-20231115204026980](images\26.png)
+![image-20231115204026980](images/26.png)
 
 设置IP的ip和DNS服务器
 
-![image-20231115204145443](images\27.png)
+![image-20231115204145443](images/27.png)
 
 修改计算机名并加入域
 
 点击 **控制面板** ---> **系统和安全** ---> **系统** ---> **找到计算机名点击更改设置** ---> **点击更改** ---> **更改完成后点击重起计算机.（ 也加入域 ）**
 
-![image-20231115204314469](images\28.png)
+![image-20231115204314469](images/28.png)
 
 输入刚才添加的用户
 
-![image-20231115204351974](images\29.png)
+![image-20231115204351974](images/29.png)
 
 成功加入域
 
-![image-20231115204437728](images\30.png)
+![image-20231115204437728](images/30.png)
 
 重启后登录用户，用域中的名称
 
-![image-20231115204530504](images\31.png)
+![image-20231115204530504](images/31.png)
 
-![image-20231115204637085](images\32.png)
+![image-20231115204637085](images/32.png)
 
 看到了DNS服务器地址，试试能不能ping通
 
-![image-20231115204710027](images\33.png)
+![image-20231115204710027](images/33.png)
 
 接下来将win10也加入域，同样的创建一个win10test的Active Directory用户
 
-![image-20231115204906571](images\34.png)
+![image-20231115204906571](images/34.png)
 
 修改IP和DNS服务器
 
-![image-20231115204940246](images\35.png)
+![image-20231115204940246](images/35.png)
 
 在我的电脑中右键属性——>高级系统设置中修改
 
-![image-20231115205155325](images\36.png)
+![image-20231115205155325](images/36.png)
 
-![image-20231115205400277](images\37.png)
+![image-20231115205400277](images/37.png)
 
-![image-20231115205409547](images\38.png)
+![image-20231115205409547](images/38.png)
 
 重启后登录到域
 
-![image-20231115205537661](images\39.png)
+![image-20231115205537661](images/39.png)
 
-![image-20231115205636651](images\40.png)
+![image-20231115205636651](images/40.png)
 
 查看域中用户等等
 
-![image-20231115205730133](images\41.png)
+![image-20231115205730133](images/41.png)
 
 
 
