--- a/Penetration/打靶记录/渗透攻击红队域渗透靶场/渗透攻击红队域渗透靶场2/渗透攻击红队域渗透靶场2.md
+++ b/Penetration/打靶记录/渗透攻击红队域渗透靶场/渗透攻击红队域渗透靶场2/渗透攻击红队域渗透靶场2.md
@@ -112,7 +112,7 @@ for i in 10.0.1.{1..254}; do if ping -c 3 -w 3 $i &>/dev/null; then echo $i Find
 
 ```
 msf6 > setg Proxies socks5:192.168.50.128:7777
-msf6 > set ReverseAllowProxy true
+msf6 > setg ReverseAllowProxy true
 ```
 
 ![image-20231116141425533](images/20.png)
